--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
         flex-direction: column;
       }
       .App {
-        text-align: center;
+        /* text-align: center; */
         display: flex;
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
