--- a/public/index.html
+++ b/public/index.html
@@ -64,6 +64,9 @@
         -ms-flex: 1 0 auto;
         flex: 1 0 auto;
       }
+      body{
+        padding-right:0!important;
+      }
     </style>
   </body>
 </html>
